Fix menu disappear on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,7 +8,7 @@
 }
 
 body {
-    overflow: hidden;
+    overflow-x: hidden;
     background: -webkit-linear-gradient(270deg,rgba(76,157,206,1.00) 0%,rgba(255,255,255,0.00) 51.81%,rgba(0,0,0,0.00) 100%) !important;
     background: -moz-linear-gradient(270deg,rgba(76,157,206,1.00) 0%,rgba(255,255,255,0.00) 51.81%,rgba(0,0,0,0.00) 100%) !important;
     background: -o-linear-gradient(270deg,rgba(76,157,206,1.00) 0%,rgba(255,255,255,0.00) 51.81%,rgba(0,0,0,0.00) 100%) !important;
@@ -519,5 +519,8 @@ body.3columns:not(.home) #main-wrapper {
     body.home .consular-services,
     body.home .other-news {
         width: 100%;
+    }
+    .navbar-nav {
+        margin: 0;
     }
 }
